--- a/Tips.ipynb
+++ b/Tips.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tips\n",
+    "# Tips\n",
     "\n",
     "This protocol demonstrates the multiple options\n",
     "available for controlling tips"
@@ -18,23 +18,92 @@
    },
    "outputs": [],
    "source": [
+    "from opentrons import containers, instruments\n",
+    "\n",
     "trash = containers.load('point', 'D2')\n",
-    "tip_rack = containers.load('tiprack-200ul', 'B1')\n",
+    "tiprack = containers.load('tiprack-200ul', 'B1')\n",
     "\n",
-    "pipette = instruments.Pipette(axis='a')\n",
+    "pipette = instruments.Pipette(axis='a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pick Up Tip\n",
     "\n",
-    "pipette.pick_up_tip(tip_rack['A1'])  # pick up <tip_rack:A1>\n",
-    "pipette.drop_tip(tip_rack['A1'])     # drop tip <tip_rack:A1>\n",
+    "Before any liquid handling can be done, your pipette must have a tip on it. The command `pick_up_tip()` will move the pipette over to the specified tip, the press down into it to create a vacuum seal. The below example picks up the tip at location `A1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipette.pick_up_tip(tiprack['A1'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop Tip\n",
     "\n",
-    "pipette.pick_up_tip(tip_rack['A2'])  # pick up tip_rack:A2\n",
-    "pipette.return_tip()                   # return to tip_rack:A2\n",
+    "Once finished with a tip, the pipette will autonomously remove the tip when we call `drop_tip()`. We can specify where to drop the tip by passing in a location. The below example drops the tip back at its originating location on the tip rack."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipette.drop_tip(tiprack['A1'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of returning a tip to the tip rack, we can also drop it in  a trash container."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipette.pick_up_tip(tiprack['A2'])\n",
+    "pipette.drop_tip(trash)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return Tip\n",
     "\n",
-    "pipette.pick_up_tip(tip_rack['A3'])  # pick up tip_rack:A3\n",
-    "pipette.drop_tip(trash)                # drop tip in trash\n",
-    "\n",
-    "pipette.pick_up_tip(tip_rack['A4'])  # pick up tip_rack:A4\n",
-    "pipette.move_to(trash)                 # move pipette to the trash\n",
-    "pipette.drop_tip()                     # drop tip at current position\n"
+    "When we need to return the tip to its originating location on the tip rack, we can simply call `return_tip()`. The example below will automatically return the tip to `A3` on the tip rack."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipette.pick_up_tip(tiprack['A3'])\n",
+    "pipette.return_tip()"
    ]
   }
  ],
