adds headers to Setup Pipette; adds html tags for styling inside html divs

--- a/Commands/Moving.ipynb
+++ b/Commands/Moving.ipynb
@@ -53,8 +53,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
-    "<p>Setting the head speed to above `6000 mm/sec` may cause your robot to \"skip\", which means the motors will lose their grip and make a loud vibrating noise. We recommend you try out different speed values on your robot, and see what works and what doesn't.</p>\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>Setting the head speed to above <code>6000 mm/sec</code> may cause your robot to \"skip\", which means the motors will lose their grip and make a loud vibrating noise. We recommend you try out different speed values on your robot, and see what works and what doesn't.</p>\n",
     "</div>"
    ]
   },
@@ -124,8 +124,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
-    "<p>Moving with `strategy='direct'` will run the risk of colliding with things on your deck. Be very careful when using the option.</p>\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>Moving with <code>strategy='direct'</code> will run the risk of colliding with things on your deck. Be very careful when using the option.</p>\n",
     "</div>\n",
     "\n",
     "Usually the `strategy='direct'` option is useful when moving inside of a well. Take a look at the below sequence of movements, which first move the head to a well, and use `'direct'` movements inside that well, then finally move on to a different well."
