--- a/Commands/Tips Iterating.ipynb
+++ b/Commands/Tips Iterating.ipynb
@@ -58,10 +58,10 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
-    "<p>The `tip_racks=` option expects us to give it a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists), containing each tip rack we want to attach. If we are only attaching one tip rack, then the list will have a length of one, like the following:\n",
-    "\n",
-    "`tip_racks=[tiprack]`\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>The <code>tip_racks=</code> option expects us to give it a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists), containing each tip rack we want to attach. If we are only attaching one tip rack, then the list will have a length of one, like the following:\n",
+    "<br /><br />\n",
+    "<code>tip_racks=[tiprack]</code>\n",
     "</p>\n",
     "</div>"
    ]
@@ -111,15 +111,6 @@
    "source": [
     "pipette.pick_up_tip()  # this should show an error"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
