--- a/Setup/Jupyter and API.ipynb
+++ b/Setup/Jupyter and API.ipynb
@@ -11,7 +11,7 @@
     "Jupyter Notebooks are built up of cells, and a cell is the boxes that hold Python code.\n",
     "\n",
     "To run the code in a cell, first highlight the cell by clicking it. Then, run the cell by either:\n",
-    "  1. pressing the <span style=\"border:1px solid #ccc; padding:2px 8px; border-radius:2px; font-size=13px\"><i class=\"fa-step-forward fa\"></i></span> button in the toolbar above.\n",
+    "  1. pressing the <span style=\"border:1px solid #ccc; padding:2px 8px; border-radius:2px; font-size=13px\"><i class=\"fa-step-forward fa\"></i></span> arrow button in the toolbar above.\n",
     "  2. holding **`Shift`** then pressing the **`Enter`** key\n",
     "  \n",
     "Try running the cell below, and you should see a message appear in the cell's output...\n"
@@ -78,7 +78,7 @@
     "From the toolbar above, select **`Kernel >> Restart & Clear Output`**, and the your notebook will be as if you just opened it.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
+    "<p><strong>NOTE</strong></p>\n",
     "<p>Restarting the Kernel will undo any code you have run thus far, and you will need to go through and re-run the cells.</p>\n",
     "</div>"
    ]
