--- a/Setup/Setup Containers.ipynb
+++ b/Setup/Setup Containers.ipynb
@@ -24,6 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### List\n",
+    "\n",
     "Once the `container` module is loaded, you get see a list of all containers currently inside the API."
    ]
   },
@@ -42,6 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Load\n",
+    "\n",
     "Labware is loaded by with two arguments: **1)** the container type, and **2)** the deck slot it will be placed on."
    ]
   },
@@ -81,7 +85,7 @@
     "Unique names are useful in a few scenarios. First, they allow the container to have independant calibration data from other containers in the same slot. In the example above, the container named `'any-name-you-want'` will assume different calibration data from the unnamed plate, even thought they are the same type and in the same slot.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
+    "<p><strong>NOTE</strong></p>\n",
     "<p>Calibration data refers to the saved positions for each container on deck, and is a part of the <a href=\"https://opentrons.com/getting-started/calibrate-deck\">Opentrons App calibration procedure</a>.</p>\n",
     "</div>\n",
     "\n",
