--- a/Setup/Setup Instruments.ipynb
+++ b/Setup/Setup Instruments.ipynb
@@ -24,6 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Axis and Max Volume\n",
+    "\n",
     "To create a `Pipette`, you must give it an `axis` and a `max_volume`. The axis can be either `'a'` or `'b'`, and the volume is whatever your hand pipette is calibrated for. In this example, we are using a 200uL pipette."
    ]
   },
@@ -45,6 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Minimum Volume\n",
+    "\n",
     "The minimum allowed volume can be set for each pipette. If your protocol attempts to aspirate or dispense a volume below this volume, the API will give you a warning."
    ]
   },
@@ -67,6 +71,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Channels\n",
+    "\n",
     "Pipettes can also be assigned a number of channels, either `channel=1` or `channel=8`. If you do not specify, it will default to `channel=1` channel."
    ]
   },
@@ -90,7 +96,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The speeds at which the pipette will aspirate and dispense can be set through `aspirate_speed` and `dispense_speed`. The values are in millimeters/minute, and default to `aspirate_speed=300` and `dispense_speed=500`."
+    "### Plunger Speeds\n",
+    "The speeds at which the pipette will aspirate and dispense can be set through `aspirate_speed` and `dispense_speed`. The values are in millimeters/minute, and default to `aspirate_speed=300` and `dispense_speed=500`.\n",
+    "\n",
+    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>Plunger speeds above 500 run the risk of causing the motor to skip. If your motor skips even once during a protocol run, your volumes will no longer be accurate. So whenever you increase the plunger speed test thuroughly to see if it skips.</p>\n",
+    "</div>"
    ]
   },
   {
