--- a/Setup/Setup Containers.ipynb
+++ b/Setup/Setup Containers.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "### List\n",
     "\n",
-    "Once the `container` module is loaded, you get see a list of all containers currently inside the API."
+    "Once the `container` module is loaded, you can see a list of all containers currently inside the API by calling `.list()`."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "### Load\n",
     "\n",
-    "Labware is loaded by with two arguments: **1)** the container type, and **2)** the deck slot it will be placed on."
+    "Labware is loaded with two arguments: **1)** the container type, and **2)** the deck slot it will be placed in on the robot."
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unique names are useful in a few scenarios. First, they allow the container to have independant calibration data from other containers in the same slot. In the example above, the container named `'any-name-you-want'` will assume different calibration data from the unnamed plate, even thought they are the same type and in the same slot.\n",
+    "Unique names are useful in a few scenarios. First, they allow the container to have independant calibration data from other containers in the same slot. In the example above, the container named `'any-name-you-want'` will assume different calibration data from the unnamed plate, even though they are the same type and in the same slot.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
