rendering error on github

--- a/Commands/Tips Iterating.ipynb
+++ b/Commands/Tips Iterating.ipynb
@@ -59,10 +59,8 @@
    "source": [
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
-    "<p>The <code>tip_racks=</code> option expects us to give it a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists), containing each tip rack we want to attach. If we are only attaching one tip rack, then the list will have a length of one, like the following:\n",
-    "<br /><br />\n",
-    "<code>tip_racks=[tiprack]</code>\n",
-    "</p>\n",
+    "<p>The <code>tip_racks=</code> option expects us to give it a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists), containing each tip rack we want to attach. If we are only attaching one tip rack, then the list will have a length of one, like the following:</p>\n",
+    "<p><code>tip_racks=[tiprack]</code></p>\n",
     "</div>"
    ]
   },
