adds documentation for star_at_tip() and current_tip()

--- a/Commands/Tips Iterating.ipynb
+++ b/Commands/Tips Iterating.ipynb
@@ -107,7 +107,61 @@
    },
    "outputs": [],
    "source": [
-    "pipette.pick_up_tip()  # this should show an error"
+    "pipette.pick_up_tip()  # this will show an error if you already run the above cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select Starting Tip\n",
+    "\n",
+    "Calls to `pick_up_tip()` will by default start at the attached tip rack's `A1` location. If you however want to start automatic tip iterating at a different tip, you can use `start_at_tip()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pipette = instruments.Pipette(\n",
+    "    axis='b',\n",
+    "    tip_racks=[tip_rack_1, tip_rack_2],\n",
+    "    trash_container=trash\n",
+    ")\n",
+    "pipette.start_at_tip(tip_rack_1['C3'])\n",
+    "pipette.pick_up_tip()  # pick up C3 from \"tip_rack_1\"\n",
+    "pipette.return_tip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Current Tip's Origin\n",
+    "\n",
+    "The origin of the pipette's current tip can get received by calling `current_tip()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    pipette.pick_up_tip()\n",
+    "    this_tip = pipette.current_tip()   # save the current tip's origin in a variable\n",
+    "    pipette.return_tip()\n",
+    "    print(this_tip)\n",
+    "    if this_tip is tip_rack_1['H12']:  # detect before we move to second tip rack\n",
+    "        break\n",
+    "print('Exited loop')"
    ]
   }
  ],
