--- a/Commands/Moving.ipynb
+++ b/Commands/Moving.ipynb
@@ -183,10 +183,10 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(plate['A1'])  # first, move to well A1\n",
-    "robot.home(enqueue=True)      # second, home the robot on all axis\n",
-    "pipette.move_to(plate['B1'])  # third, move to well B1\n",
-    "robot.home('z', enqueue=True)      # fourth, home the Z axis only"
+    "pipette.move_to(plate['A1'])       # move to well A1\n",
+    "robot.home(enqueue=True)           # home the robot on all axis\n",
+    "pipette.move_to(plate['B1'])       # move to well B1\n",
+    "robot.home('z', enqueue=True)      # home the Z axis only"
    ]
   }
  ],
