add reference to touch_tip() with numeric argument for vertical offsets

--- a/Commands/Liquid Control.ipynb
+++ b/Commands/Liquid Control.ipynb
@@ -145,18 +145,21 @@
     "\n",
     "To touch tip is to move the pipette's currently attached tip to the edges of a well, for the purpose of knocking off any droplets that might be hanging from the tip.\n",
     "\n",
-    "When calling `touch_tip()` on a pipette, we have the option to specify a location where the tip will touch the inner walls. If no location is specified, the pipette will touch tip inside it's current location."
+    "When calling `touch_tip()` on a pipette, we have the option to specify a location where the tip will touch the inner walls. If no location is specified, the pipette will touch tip inside it's current location.\n",
+    "\n",
+    "**New feature in 2.2.0:** Calling `touch_tip()` with a number allows you to set the vertical offset relative to the top of the well. For example, `touch_tip(-2)` will perform a touch-tip movement 2mm below to the top of the well."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "pipette.touch_tip()                # touch tip within current location\n",
+    "pipette.touch_tip(-2)              # touch tip 2mm below the top of the current location\n",
     "pipette.touch_tip(plate['B1'])     # touch tip within plate:B1"
    ]
   },
