cleans up hello opentrons

--- a/Hello Opentrons.ipynb
+++ b/Hello Opentrons.ipynb
@@ -11,7 +11,7 @@
     "Below is an example of a basic protocol to run on your liquid handler, which transfers 100uL from one well of a plate to the next.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p>**NOTE**</p>\n",
+    "<p><strong>NOTE</strong></p>\n",
     "<p>If you are unfamiliar with Python and find the below example hard to read, please go through an <a href=\"https://wiki.python.org/moin/BeginnersGuide/NonProgrammers\">introduction to Python tutorial</a> before moving forward with this guide, as it will allow you to better understand the Opentrons API.</p>\n",
     "</div>"
    ]
@@ -45,7 +45,6 @@
     "\n",
     "The design goal of the Opentrons API is to make code readable and easy to understand. If we were to read the above code example as if it were in plain English, it would look like the following:\n",
     "\n",
-    "<hr></hr>\n",
     "```\n",
     "Import the Opentrons API's containers and instruments.\n",
     "\n",
@@ -58,9 +57,17 @@
     "Aspirate 100uL from the plate's `A1` well.\n",
     "Dispense 100uL to the plate's `A2` well.\n",
     "Drop the tip back to the tiprack's `A1` position.\n",
-    "```\n",
-    "<hr></hr>"
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
