changes after testing

--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -27,43 +27,62 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from opentrons import robot\n",
     "\n",
-    "ports = robot.get_serial_ports_list()\n",
-    "for p in robot.get_serial_ports_list():\n",
-    "    print(p)\n",
     "\n",
-    "# TO CONNECT, UNCOMMENT THE BELOW LINE AND EDIT WITH THE NAME OF YOUR PORT\n",
-    "robot.connect('/dev/tty.usbmodem14141')\n",
+    "def connect_to_robot():\n",
+    "    print('Enter the number of the port to connect to:\\n')\n",
+    "    count = 0\n",
+    "    for portname in robot.get_serial_ports_list():\n",
+    "        count += 1\n",
+    "        print('  {0})   {1}\\n'.format(count, portname))\n",
+    "    val = input('Enter number next to desired port (1, 2, etc): '.format(1, count))\n",
+    "    try:\n",
+    "        val = int(val) - 1\n",
+    "    except:\n",
+    "        print('Bad input: {}'.format(val))\n",
+    "        sys.exit()\n",
+    "    try:\n",
+    "        robot.connect(robot.get_serial_ports_list()[val])\n",
+    "    except RuntimeWarning:\n",
+    "        robot.connect(robot.get_serial_ports_list()[val])\n",
+    "    print('Connected, homing...')\n",
+    "    robot.home()\n",
+    "    robot.home('xy')\n",
     "\n",
-    "if not robot.is_connected():\n",
-    "    raise RuntimeError('No connection to robot')\n",
     "\n",
-    "print('Connected, homing...')\n",
+    "def request_distance_from_user():\n",
+    "    dimensions = robot._driver.get_dimensions() - (50, 50, 0)\n",
+    "    x_dist = int(input('Enter distanct for X to travel (max {}):'.format(dimensions[0])))\n",
+    "    y_dist = int(input('Enter distanct for Y to travel (max {}):'.format(dimensions[1])))\n",
+    "    x_dist = min(x_dist, dimensions[0])\n",
+    "    y_dist = min(y_dist, dimensions[1])\n",
+    "    return (x_dist, y_dist)\n",
     "\n",
-    "robot.home()\n",
-    "robot.home('xy')\n",
+    "    \n",
+    "def measure_belts(x_dist, y_dist:\n",
+    "    print('Moving the robot {0}mm on the X, and {1}mm on the Y'.format(x_dist, y_dist))\n",
+    "    robot.move_head(x=x_dist, y=y_dist * -1, mode='relative')  # Y axis is flipped\n",
     "\n",
-    "print('Moving the robot {0}mm on the X, and {1}mm on the Y'.format(dimensions[0], dimensions[1]))\n",
+    "    input('mark X position on the robot, then press ENTER key')\n",
+    "    input('mark Y position on the robot, then press ENTER key')\n",
     "\n",
-    "dimensions = robot._driver.get_dimensions() - (50, 50, 0)\n",
-    "robot.move_head(x=dimensions[0], y=-dimensions[1], mode='relative')\n",
+    "    robot.home('xy')\n",
+    "    robot.home('xy')\n",
     "\n",
-    "input('mark X position on the robot, then press ENTER key')\n",
-    "input('mark Y position on the robot, then press ENTER key')\n",
+    "    actual_travel_x = float(input('enter the measured X distance: '))\n",
+    "    actual_travel_y = float(input('enter the measured Y distance: '))\n",
+    "    robot._driver.calibrate_steps_per_mm('x', x_dist, actual_travel_x)\n",
+    "    robot._driver.calibrate_steps_per_mm('y', y_dist, actual_travel_y)\n",
     "\n",
-    "robot.home('xy')\n",
-    "robot.home('xy')\n",
     "\n",
-    "actual_travel_x = float(input('enter the measured X distance: '))\n",
-    "actual_travel_y = float(input('enter the measured Y distance: '))\n",
-    "\n",
-    "robot._driver.calibrate_steps_per_mm('x', dimensions[0], actual_travel_x)\n",
-    "robot._driver.calibrate_steps_per_mm('y', dimensions[1], actual_travel_y)\n",
+    "connect_to_robot()\n",
+    "x, y = request_distance_from_user()\n",
+    "measure_belts(x, y)\n",
     "\n",
     "print('New values saved. Restarting the robot to allow changes to take effect')\n",
     "print('Please wait 5-10 seconds before reconnecting to the robot')\n",
@@ -71,6 +90,15 @@
     "robot._driver.reset()\n",
     "robot.disconnect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
