--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -20,7 +20,13 @@
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
     "<p>Distance accuracy is different from consistency. If your robot cannot move to the same location consistently, this is a different problem and more to do with the tension of your belts. Please contact Opentrons support to help troubleshoot solutions.</p>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "### Instructions\n",
+    "\n",
+    "Make sure your OT1 is connected to your computer, and the App or any other program is **not** connected to it.\n",
+    "\n",
+    "Run the cell below, and it will ask you which port to connect to, and also what distances to move. After running the cell, scroll to the bottom of this screen to follow along with the print-outs."
    ]
   },
   {
@@ -90,15 +96,6 @@
     "robot._driver.reset()\n",
     "robot.disconnect()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
