--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -4,24 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr></hr>\n",
-    "\n",
     "# XY Belt Calibration\n",
     "\n",
     "The OT1 uses elastic bands to travel along its X (left-right) and Y (forward-backward) axis. Very slight changes in length from stretching will cause the robot to slowly lose its ability to measure distances accurately. For example, we tell the robot to move 100mm, but it seems to move about 103mm.\n",
     "\n",
-    "There is a solution! What we can do is simply tell the robot to move a certain distance, then measure and tell it how far it actually travelled. If done accurately, this will then fix it's internal calculations for determining \"real-world\" distances.\n",
+    "There is a solution! What we can do is simply tell the robot to move a certain distance, then measure and tell it how far it actually travelled. If done accurately, this will then fix the robot's internal calculations for determining \"real-world\" distances.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
-    "<p>Be very careful when changing the XY belt calibrations, as innacurate settings could make the robot move uncontrollably. If things go wrong and you wish to start fresh, you can always <a href=\"http://docs.opentrons.com/updating_firmware.html\">reload the firmware</a>.</p>\n",
+    "<p>Be very careful when changing the XY belt calibrations, as innacurate setting could make the robot move uncontrollably. If things go wrong and you wish to start fresh, you can always <a href=\"http://docs.opentrons.com/updating_firmware.html\">reload the firmware</a>.</p>\n",
     "</div>\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
-    "<p>Distance accuracy is different from consistency. If your robot cannot move to the same location consistently, this is a different problem and more to do with the tension of your belts. Please contact Opentrons support to help troubleshoot solutions.</p>\n",
-    "</div>\n",
-    "\n",
+    "<p>Distance accuracy is different from consistency. If your robot cannot move to the same location consistently, this is a different problem and more to do with the tension of your belts. Please contact Opentrons support to help troubleshoot.</p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Instructions\n",
     "\n",
     "Make sure your OT1 is connected to your computer, and the App or any other program is **not** connected to it.\n",
@@ -41,14 +44,20 @@
     "\n",
     "\n",
     "def connect_to_robot():\n",
+    "    \"\"\"\n",
+    "    Search for ports, connect to a robot, and home\n",
+    "    \"\"\"\n",
     "    print('Enter the number of the port to connect to:\\n')\n",
     "    count = 0\n",
-    "    for portname in robot.get_serial_ports_list():\n",
-    "        count += 1\n",
+    "    ports = robot.get_serial_ports_list()\n",
+    "    if not ports:\n",
+    "        raise RuntimeError(\n",
+    "            'No serial ports found. Please make sure your robot\\'s USB cable is connected')\n",
+    "    for i, portname in enumerate(ports):\n",
     "        print('  {0})   {1}\\n'.format(count, portname))\n",
-    "    val = input('Enter number next to desired port (1, 2, etc): '.format(1, count))\n",
+    "    val = input('Enter number next to desired port (0, 1, etc): '.format(1, count))\n",
     "    try:\n",
-    "        val = int(val) - 1\n",
+    "        val = int(val)\n",
     "    except:\n",
     "        print('Bad input: {}'.format(val))\n",
     "        sys.exit()\n",
@@ -62,6 +71,9 @@
     "\n",
     "\n",
     "def request_distance_from_user():\n",
+    "    \"\"\"\n",
+    "    Get the dimensions of this robot, and ask the user for the testing distance\n",
+    "    \"\"\"\n",
     "    dimensions = robot._driver.get_dimensions() - (50, 50, 0)\n",
     "    x_dist = int(input('Enter distanct for X to travel (max {}):'.format(dimensions[0])))\n",
     "    y_dist = int(input('Enter distanct for Y to travel (max {}):'.format(dimensions[1])))\n",
@@ -70,7 +82,10 @@
     "    return (x_dist, y_dist)\n",
     "\n",
     "    \n",
-    "def measure_belts(x_dist, y_dist:\n",
+    "def measure_belts(x_dist, y_dist):\n",
+    "    \"\"\"\n",
+    "    Move the robot, allow user to mark positions, ask user to measure and submit measurements\n",
+    "    \"\"\"\n",
     "    print('Moving the robot {0}mm on the X, and {1}mm on the Y'.format(x_dist, y_dist))\n",
     "    robot.move_head(x=x_dist, y=y_dist * -1, mode='relative')  # Y axis is flipped\n",
     "\n",
@@ -95,6 +110,13 @@
     "\n",
     "robot._driver.reset()\n",
     "robot.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### follow the print-outs you'll see above ^^^"
    ]
   }
  ],
