adds video link and tools required

--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -10,10 +10,13 @@
     "\n",
     "There is a solution! What we can do is simply tell the robot to move a certain distance, then measure and tell it how far it actually travelled. If done accurately, this will then fix the robot's internal calculations for determining \"real-world\" distances.\n",
     "\n",
-    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p><strong>NOTE</strong></p>\n",
-    "<p>Be very careful when changing the XY belt calibrations, as innacurate setting could make the robot move uncontrollably. If things go wrong and you wish to start fresh, you can always <a href=\"http://docs.opentrons.com/updating_firmware.html\">reload the firmware</a>.</p>\n",
-    "</div>\n",
+    "### Video Tutorial on Calibrating XY belts\n",
+    "\n",
+    "Follow along with [this video tutorial](https://vimeo.com/202404823). It will show you how to run this notebook and measure your robot's XY belts.\n",
+    "\n",
+    "### Tools Required\n",
+    "\n",
+    "Some [painter's tape](https://www.amazon.com/3M-Scotch-Blue-Safe-Release-Multi-Surfaces-Painters/dp/B0064N00DE), a pen, and an accurate measuring tool like a ruler.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
@@ -25,11 +28,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instructions\n",
+    "## Instructions\n",
     "\n",
     "Make sure your OT1 is connected to your computer, and the App or any other program is **not** connected to it.\n",
     "\n",
-    "Run the cell below, and it will ask you which port to connect to, and also what distances to move. After running the cell, scroll to the bottom of this screen to follow along with the print-outs."
+    "Run the cell below, and it will ask you which port to connect to, and also what distances to move. After running the cell, scroll to the bottom of this screen to follow along with the print-outs.\n",
+    "\n",
+    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>Be very careful when changing the XY belt calibrations, as innacurate setting could make the robot move uncontrollably. If things go wrong and you wish to start fresh, you can always <a href=\"http://docs.opentrons.com/updating_firmware.html\">reload the firmware</a>.</p>\n",
+    "</div>"
    ]
   },
   {
