--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -10,14 +10,6 @@
     "\n",
     "There is a solution! What we can do is simply tell the robot to move a certain distance, then measure and tell it how far it actually travelled. If done accurately, this will then fix the robot's internal calculations for determining \"real-world\" distances.\n",
     "\n",
-    "### Video Tutorial on Calibrating XY belts\n",
-    "\n",
-    "Follow along with [this video tutorial](https://vimeo.com/202404823). It will show you how to run this notebook and measure your robot's XY belts.\n",
-    "\n",
-    "### Tools Required\n",
-    "\n",
-    "Some [painter's tape](https://www.amazon.com/3M-Scotch-Blue-Safe-Release-Multi-Surfaces-Painters/dp/B0064N00DE), a pen, and an accurate measuring tool like a ruler.\n",
-    "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
     "<p>Distance accuracy is different from consistency. If your robot cannot move to the same location consistently, this is a different problem and more to do with the tension of your belts. Please contact Opentrons support to help troubleshoot.</p>\n",
@@ -33,6 +25,14 @@
     "Make sure your OT1 is connected to your computer, and the App or any other program is **not** connected to it.\n",
     "\n",
     "Run the cell below, and it will ask you which port to connect to, and also what distances to move. After running the cell, scroll to the bottom of this screen to follow along with the print-outs.\n",
+    "\n",
+    "### Video Tutorial on Calibrating XY belts\n",
+    "\n",
+    "Follow along with [this video tutorial](https://vimeo.com/202404823). It will show you how to run this notebook and measure your robot's XY belts.\n",
+    "\n",
+    "### Tools Required\n",
+    "\n",
+    "Some [painter's tape](https://www.amazon.com/ScotchBlue-Painters-Multi-Use-1-41-Inch-60-Yard/dp/B00004Z4DI/ref=sr_1_4?s=hi&ie=UTF8&qid=1486139289&sr=1-4&keywords=painters+tape), a pen, and an accurate measuring tool like a ruler.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
